--- a/index.html
+++ b/index.html
@@ -6,5 +6,33 @@
 </head>
 <body>
   <h1>HELLO WORD!</h1>
+  <p style="font: 2em/2 sans-serif;">
+    <a type="button" onclick="countUp()" style="background: DeepSkyBlue; color: white; border: 1px solid DeepSkyBlue; padding: 10px 20px; border-radius: 5px 0 0 5px;">Like</a><span id="like-result" style="border: 1px solid #ccc; border-width: 1px 1px 1px 0; border-radius: 0 5px 5px 0; padding: 10px 20px;"></span>
+  </p>
+  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    const config = {
+      apiKey: "AIzaSyB8euSpVJ8x2THqkHSPqLMWDR7aI2LRuX0",
+      authDomain: "test-ed564.firebaseapp.com",
+      databaseURL: "https://test-ed564.firebaseio.com",
+      projectId: "test-ed564",
+      storageBucket: "test-ed564.appspot.com",
+      messagingSenderId: "591217157678"
+    };
+    firebase.initializeApp(config);
+
+    const keyRef = firebase.database().ref('like/count');
+
+    function countUp () {
+      keyRef.transaction(function(count) {
+        return (count || 0) + 1;
+      })
+    }
+
+    keyRef.on('value', function(snapshot) {
+      document.getElementById('like-result').textContent = snapshot.val();
+    })
+  </script>
 </body>
 </html>
