--- a/index.html
+++ b/index.html
@@ -4,35 +4,38 @@
   <meta charset="UTF-8">
   <title>GSSxGSS Pages</title>
 </head>
-<body>
-  <h1>HELLO WORD!</h1>
-  <p style="font: 2em/2 sans-serif;">
-    <a type="button" onclick="countUp()" style="background: DeepSkyBlue; color: white; border: 1px solid DeepSkyBlue; padding: 10px 20px; border-radius: 5px 0 0 5px;">Like</a><span id="like-result" style="border: 1px solid #ccc; border-width: 1px 1px 1px 0; border-radius: 0 5px 5px 0; padding: 10px 20px;"></span>
-  </p>
-  <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+<body style="padding: 0; margin: 0; font: 2em/2 monospace; display: flex; align-items: center; justify-content: center; height: 100vh;">
+  <div style="width: 240px; height: 60px; line-height: 60px; text-align: center; border: 1px solid black; border-radius: 4px; display: flex; -moz-user-select: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;">
+    <a type="button" id="likeButton" style="background: black; color: white; width: 50%; cursor: pointer;">Like</a>
+    <span id="likeCount" style="width: 50%">0</span>
+  </div>
+  <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
   <script>
     // Initialize Firebase
-    const config = {
+    firebase.initializeApp({
       apiKey: "AIzaSyB8euSpVJ8x2THqkHSPqLMWDR7aI2LRuX0",
       authDomain: "test-ed564.firebaseapp.com",
       databaseURL: "https://test-ed564.firebaseio.com",
-      projectId: "test-ed564",
       storageBucket: "test-ed564.appspot.com",
-      messagingSenderId: "591217157678"
-    };
-    firebase.initializeApp(config);
+    });
 
-    const keyRef = firebase.database().ref('like/count');
+    const keyRef = firebase.database().ref('like');
 
-    function countUp () {
-      keyRef.transaction(function(count) {
-        return (count || 0) + 1;
+    function countUp (e) {
+      e.preventDefault();
+      keyRef.transaction(function(like) {
+        return like ? like + 1 : 1;
       })
     }
 
-    keyRef.on('value', function(snapshot) {
-      document.getElementById('like-result').textContent = snapshot.val();
-    })
+    function countListener() {
+      keyRef.on('value', function(snapshot) {
+        document.getElementById('likeCount').textContent = snapshot.val() || 0;
+      });
+    }
+
+    document.getElementById('likeButton').addEventListener('click', countUp);
+    countListener();
   </script>
 </body>
 </html>
